# devflow

./: .gitignore  .mcp.json  .mise.toml  CHARTER.md  CLAUDE.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  PLANNING.md  README.md  TASK.md  devflow.yml  go.mod  pyproject.toml
.claude-plugin/: plugin.json
.devflow/code/: code_index.json  entities.json
.devflow/semantic/: vectors.db
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  security.yml  test.yml  ui-test.yml
bridge/: __init__.py  main.py  server.py  types.py
bridge/handlers/: __init__.py  agents.py  ai.py  code.py  components.py  config.py  context.py  database.py  deploy.py  dev.py  docs.py  domains.py  infra.py  logs.py  projects.py  secrets.py  setup.py  system.py  templates.py  tools.py
cmd/devflow/: main.go
devflow/: __init__.py  __main__.py  cli.py  cli_windows.py  doctor.py
devflow/agents/: __init__.py  browser.py  installer.py  models.py  registry.py
devflow/ai/: __init__.py  embeddings.py  prompts.py  providers.py
devflow/code/: __init__.py  chunker.py  manager.py  models.py  resolver.py  scanner.py
devflow/code/parsers/: __init__.py  base.py  python_parser.py  treesitter_parser.py
devflow/commands/: __init__.py  config.py  context.py  db.py  deploy.py  dev.py  doctor.py  infra.py  install.py  secrets.py
devflow/components/: __init__.py  manager.py  models.py  scanner.py
devflow/core/: __init__.py  config.py  context.py  errors.py  git.py  locking.py  paths.py  platform.py
devflow/docs/: __init__.py  embedder.py  knowledge_graph.py  manager.py  models.py  semantic_store.py  vector_store.py  web_fetcher.py
devflow/domains/: __init__.py  manager.py  models.py
devflow/infrastructure/: __init__.py  compose_transformer.py
devflow/infrastructure/templates/: __init__.py  docker-compose.yml  tls.yml  traefik.yml
devflow/migrations/: __init__.py  engine.py  generator.py  tracker.py
devflow/migrations/executors/: __init__.py  base.py  sql.py  supabase_cli.py
devflow/presets/: __init__.py  aocodex.py  aosentry.py  base.py
devflow/providers/: __init__.py  base.py  docker.py  github.py  infrastructure.py  mkcert.py  onepassword.py  ssh.py  supabase.py
devflow/providers/installers/: __init__.py  apt.py  base.py  brew.py  (+5 more)
devflow/service/: __init__.py  devflow.service  main.py  server.py
devflow/templates/: __init__.py  git_importer.py  loader.py  models.py  renderer.py  validator.py
devflow/tools/: __init__.py  browser.py  cache.py  categorizer.py  models.py
devflow/utils/: __init__.py  console.py
docs/: ARCHITECTURAL_ASSESSMENT.md  ARCHITECTURAL_REVIEW_REPORT.md  DEVELOPER_EXPERIENCE.md  IMPLEMENTATION_SUMMARY.md  PLATFORM_ARCHITECTURE.md  PRD_UPDATE_PLAN.md  PRP_VALIDATION_PROMPT.md  windows-setup.md
docs/api/: rpc-methods.md
docs/architecture/: overview.md
docs/prds/: COMPARISON.md  PRD-001-OVERVIEW.md  PRD-002-KNOWLEDGE-HUB.md  PRD-003-WORKFLOW-ENGINE.md  PRD-004-MCP-GATEWAY.md  PRD-005-UI-DASHBOARD.md  PRD-006-INTEGRATIONS.md  PRD-007-SECRETS-MANAGEMENT.md  PRD-008-DEPLOYMENT-ARCHITECTURE.md  PRD-009-AOSENTRY-INTEGRATION.md  PRD-010-DEVFLOW-CODE.md  PRD-011-DEVFLOW-RUNTIME.md  PRD-012-DEVFLOW-ANALYTICS.md  PRD-013-PLATFORM-SERVICES.md  PRD-014-DEVFLOW-CLI.md  PRD-015-DEVFLOW-DESKTOP.md  README.md
docs/testing/: cross-platform-test-plan.md
docs/wiki/: Commands.md  Configuration.md  Installation.md  Providers.md  README.md  Use-Cases.md
docs/workflow-recommendations/: aocodex-migrations.md  aosentry-migrations.md
internal/: README.md
presets/: aocodex.yml  aosentry.yml
tests/: conftest.py
tests/contracts/: generate_snapshots.py
tests/integration/: test_tcp_bridge.py
tests/unit/: test_config.py  test_migrations.py  test_providers.py
ui/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
ui-native/: Package.resolved  Package.swift  README.md
ui-native/DevFlow/: ContentView.swift  DevFlowApp.swift
ui-native/DevFlow.xcodeproj/: project.pbxproj
ui-native/DevFlowTests/: ModelTests.swift  RpcClientTests.swift
ui-native/DevFlowUITests/: DevFlowUITests.swift
ui-native/scripts/: sync-xcode-files.rb  ui-automation.sh
ui/e2e/: app.spec.ts
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src-tauri/src/backend/: config.rs  detection.rs  installer.rs  mod.rs
ui/src-tauri/src/bridge/: mod.rs  rpc.rs  sidecar.rs  tcp.rs
ui/src-tauri/src/commands/: backend_setup.rs  config.rs  database.rs  deploy.rs  dev.rs  infra.rs  mod.rs  projects.rs  secrets.rs  setup.rs  system.rs
ui/src-tauri/tests/: manual_wsl_test.md
(+250 files in other folders)
