[package]
name = "devflow-ui"
version = "0.2.8"
description = "DevFlow Desktop UI - Local development environment manager"
authors = ["DevFlow Team"]
license = "MIT"
repository = "https://github.com/aocyber/devflow"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "devflow_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
open = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
